Add comment field with word count to survey form
Added a new text area for comments with a word count limit.

--- a/index.html
+++ b/index.html
@@ -43,6 +43,12 @@
         <label for="solicitante">Solicitante:</label>
         <input type="text" id="solicitante" name="solicitante" placeholder="Solicitante" readonly>
       </div>
+
+      <div class="field">
+        <label for="comentario">Comentario (máximo 50 palabras):</label>
+        <textarea id="comentario" name="comentario" placeholder="Escriba aquí sus comentarios..." maxlength="500" rows="3"></textarea>
+        <small id="wordCount" style="color: #666; font-size: 12px;">0 / 50 palabras</small>
+      </div>
       <!-- FIN NUEVOS CAMPOS -->
 
       <fieldset style="border:0;padding:0;margin:0">
